# CTS-3000-Quantified-Self-Data

.github/workflows/: pnpm-build.yaml
data_processing/: clean-file.py  combine_data.py  compute_id.py  fetch-metadata.py  parse-html.py  pyproject.toml
data_processing/Classifier/: step1_embed.py  step2_cluster.py  step3_finalize.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  app.css
